--- a/style.css
+++ b/style.css
@@ -11,9 +11,19 @@ h1{
 
 .image{
 	height: 100%;
-	background-image: url("images/fond1");
   background-size: cover;
   position: relative;
+}
+.image1{
+   background-image: url("images/fond1");
+}
+.image2{
+
+    background-image: url("images/fond2");
+}
+.image3{
+
+    background-image: url("images/fond3");
 }
 
 .form{
