--- a/style.css
+++ b/style.css
@@ -9,39 +9,91 @@ h1{
 	margin-top: 0;
 }
 
+p{
+        color: rgb(16,255,7);
+    margin-top: 0;
+}
+
 .image{
 	height: 100%;
   background-size: cover;
   position: relative;
-}
-.image1{
-   background-image: url("images/fond1");
-}
-.image2{
-
-    background-image: url("images/fond2");
-}
-.image3{
-
-    background-image: url("images/fond3");
+     background-image: url("images/fond3");
 }
 
-.form{
-   
+
+.form p{
+ transition: all 0.7s ease-out;
     
 }
+
+.form a{
+    font-size: 18px;
+    font-weight: 800;
+    text-decoration: none;
+    color: rgb(32,255,14);
+
+}
+
+
 .result{
-    height: 68px;
+    height: 200px;
+    width: 400px;
+    overflow: auto;
     color: rgb(32,255,14);
     transform: skewY(-7deg);
-    margin-top: 135px;
+    margin-top: 174px;
     margin-left: 148px;
 }
 
 .marge{
-    margin-top: 83px;
+    margin-top: -97px;
     margin-left: 341px;
     transform: skewY(-16deg);
 
 }
+.a2{
+    margin-left: 142px;
+}
+.a2 input{
+    width: 50px;
+}
+.result::-webkit-scrollbar {
+    background-color: rgb(32,255,14);
+     width: 5px;
+     height: 5px;
+     border-radius: 20px
+ }
 
+ .LeForm{
+        position: absolute;
+    margin-left: 73%;
+    margin-top: -243px;
+ }
+
+ .LeForm h4,
+{
+    width: 200px;
+    margin-left: -39px;
+ }
+ #quete{
+        transform: skewY(4deg);
+        font-weight: 900;
+    font-style: oblique;
+     width: 200px;
+    margin-left: -39px;
+ }
+
+.LeForm input{
+    margin-left: -37px;
+    margin-top: 117px;
+}
+
+.control{
+    margin-left: 53%;
+    position: absolute;
+    margin-top: 27%;
+    width: 143px;
+    height: 79px;
+    opacity: 0;
+}
